# gelos

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt
.Trash-0/files/: generate_prithvi_test.py  pmtiles_generation.ipynb  pmtiles_generation.py
.Trash-0/info/: generate_prithvi_test.py.trashinfo  pmtiles_generation.ipynb.trashinfo  pmtiles_generation.py.trashinfo
.agents/plans/: env-authoritative-paths.md  simplify-config-path-loading.md
.github/: copilot-instructions.md
docs/: PRD.md  mkdocs.yml
docs/docs/: getting-started.md  index.md  starting-new-project.md
gelos/: __init__.py  analysis.py  config.py  dataset.py  embedding_extraction.py  embedding_generation.py  embedding_transformation.py  extraction.py  features.py  gelosdatamodule.py  gelosdataset.py  generation.py  models.py  plots.py  plotting.py  pmtiles_generation.py  transforms.py  tsne_transform.py
gelos/configs/: prithvi_eo_300m_embedding_generation.yaml  prithvi_eo_600m_embedding_generation.yaml  prithvieov2300_blueperturb.yaml  prithvieov2300_nirperturb.yaml  prithvieov2600_blueperturb.yaml  prithvieov2600_nirperturb.yaml  terramind_embedding_generation.yaml  terramindv1base_blueperturb.yaml  terramindv1base_noperturb.yaml
gelos/modeling/: predict.py  train.py
notebooks/: 00_dwg_addidtoparquet.ipynb  00_dwg_renamefiles.ipynb  01_dwg_calculatestatistics.ipynb  02_dwg_generateembeddings.ipynb  02_dwg_generateprithviembeddings.ipynb  02_dwg_generateterramindembeddings.ipynb.ipynb  03_dwg_generateterramindembeddings.ipynb  03_dwg_inspectembeddings.ipynb  03_dwg_visualizeembeddings.ipynb  04_dwg_inspectembeddings.ipynb  04_dwg_randomforest.ipynb  05_dwg_visualizeembeddings.ipynb  06_dwg_noiseablation.ipynb  07_dwg_knnclassifier.ipynb  add_embeddings_to_parquet.py  add_id_to_parquet.py  random_forest_test_all.py
tests/: test_analysis.py  test_config.py  test_data.py  utils.py
tests/fixtures/: example_config.yaml
