[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gelos"
version = "0.0.1"
description = "Repository for Geospatial Exploration of Latent Observation Space (GELOS)"
authors = [
  { name = "Denys Godwin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["gelos"]
include = ["pyproject.toml", "gelos/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["gelos"]
force-sort-within-sections = true


[tool.pixi.workspace]
name = "gelos"
description = "Repository for Geospatial Exploration of Latent Observation Space (GELOS)"
version = "0.1.0"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "~=3.11.0"
pytest = "*"
ruff = "*"
pip = "*"
terratorch = "==1.1.1"
pyarrow = "~=23.0.0"
typer = "*"
tqdm = "*"
numpy = "~=1.26.4"
pandas = "~=3.0.0"
matplotlib = "~=3.10.8"
rioxarray = "~=0.19.0"
scikit-learn = "~=1.8.0"
geopandas = "~=1.1.2"
pillow = "*"
jupyterlab = "*"
python-dotenv = "*"
mkdocs = "*"
timm = "~=1.0.24"
einops = "*"
loguru = "*"

[tool.pixi.pypi-dependencies]
mkdocs = "*"
python-dotenv = "*"

[tool.pixi.pypi-dependencies.gelos]
path = "."
editable = true
