[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gelos"
version = "1.0.0"
description = "Repository for Geospatial Exploration of Latent Observation Space (GELOS)"
authors = [
  { name = "Denys Godwin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["gelos"]
include = ["pyproject.toml", "gelos/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["gelos"]
force-sort-within-sections = true


[tool.pixi.workspace]
name = "gelos"
description = "Repository for Geospatial Exploration of Latent Observation Space (GELOS)"
version = "1.0.0"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "~=3.11.0"
pytest = "*"
ruff = "*"
pip = "*"
terratorch = "1.1.1*"
pyarrow = "~=23.0.0"
typer = "*"
tqdm = "*"
numpy = "~=1.26.4"
pandas = "~=3.0.0"
matplotlib = "~=3.10.8"
rioxarray = "~=0.19.0"
scikit-learn = "~=1.8.0"
geopandas = "~=1.1.2"
pillow = "*"
jupyterlab = "*"
python-dotenv = "*"
mkdocs = "*"
timm = "~=1.0.24"
einops = "*"
loguru = "*"

# CPU-only pytorch for the default environment
[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

# CUDA feature: use `pixi shell -e cuda` for local GPU support
[tool.pixi.feature.cuda]
channels = ["conda-forge", "pytorch"]

[tool.pixi.feature.cuda.dependencies]
pytorch = {version = "2.*", channel = "pytorch"}
torchvision = {version = "*", channel = "pytorch"}
pytorch-cuda = {version = "12.*", channel = "pytorch"}

[tool.pixi.environments]
default = {features = ["cpu"], solve-group = "default"}
cuda = {features = ["cuda"], solve-group = "cuda"}

[tool.pixi.pypi-dependencies]
mkdocs = "*"
python-dotenv = "*"

[tool.pixi.pypi-dependencies.gelos]
path = "."
editable = true
